[package]
name = "yaoyorozu-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# wry 0.35 と最も相性が良い 0.28系を使います
winit = "0.28"
wry = "0.35"
# 型の不一致を防ぐため、ここでも 0.5系を明示
raw-window-handle = "0.5.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
